kubernetes/prod/app-prod-deployment-flask.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment-prod
  labels:
    app: flask-api-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-api-prod
  template:
    metadata:
      labels:
        app: flask-api-prod
    spec:
      containers:
        - name: flask-api-prod
          imagePullPolicy: Always
          image: jasmineeds/tectonic-tantrums:v1.1.0
          ports:
          - containerPort: 5000
          command: ["python3", "src/api.py"]
