kubernetes/prod/app-prod-deployment-redis.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-pvc-deployment
  labels:
    app: redis-pvc-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-pvc-app
  template:
    metadata:
      labels:
        app: redis-pvc-app
    spec:
      containers:
        - name: hellos
          image: ubuntu:22.04
          command: ['sh', '-c', 'echo "Hello, Kubernetes!" >> /data/out.txt && sleep 3600']
          volumeMounts:
          - name: redis-jasmineeds-data
            mountPath: "/data"
      volumes:
      - name: redis-jasmineeds-data
        persistentVolumeClaim:
          claimName: redis-jasmineeds-data
