kubernetes/prod/app-prod-deployment-worker.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment-prod
  labels:
    app: worker-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-prod
  template:
    metadata:
      labels:
        app: worker-prod
    spec:
      containers:
        - name: worker-prod
          image: jasmineeds/tectonic-tantrums:v1.2.2
          imagePullPolicy: Always
          command: ["python3", "src/worker.py"]
