kubernetes/prod/app-prod-service-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: ClusterIP
  selector:
    app: flask
  ports:
  - name: flask
    port: 5000
    targetPort: 5000
