kubernetes/prod/app-prod-service-redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: ClusterIP
  selector:
    app: redis-pvc-app
  ports:
    - port: 6379
      targetPort: 6379
